
This file shows the changes in recent releases of MODx. The most current release is usually the 
development release, and is only shown to give an idea of what's currently in the pipeline.

MODx Revolution 2.0.0-rc-3 ($LastChangedRevision$, $LastChangedDate$)
====================================
- Added directory create icon to file tree toolbar
- [#MODX-2022] Fixed bug regarding php file permissions and writable checks
- Fixed bugs related to loading of RTEs for TVs in derivative resource classes
- Enhanced image TV to show preview of image, adjusted to display below
- [#MODX-2015] Added sanity check to prevent users from dragging Resources to a non-existent context
- [#MODX-2013] Fixed bug where hiding fields with Form Customization would disable them from being sent
- Fixed bugs with System Settings grid due to erroneous merge in UI styling
- [#MODX-2012] Made Form Customization grid sortable
- [#MODX-2011] Fixed MODx.grid.Grid::getSelectedAsList to work in Fx,IE
- Added more sophisticated check for writable directories in setup to ensure compatibility across environments
- Fixed bug where manager_language setting was ignored
- [#MODX-2007] Redirect to requested mgr page when logging in
- Adjusted version for RC-3 development

MODx Revolution 2.0.0-rc-2 (LastChangedRevision: 6924, LastChangedDate: 2010-05-27 15:56:51 -0500 (Thu, 27 May 2010))
====================================
- Fixed copy-prepared-css command in build.xml to prepare for rc-2 release
- Adjusted welcome screen URL to go to a non-release specific confluence page
- [#MODX-2000] Fixed FC rule to apply to template fields by overriding in controller
- [#MODX-2000] Add ability to specify a template in REQUEST or alter via plugin in resource/create controller
- [#MODX-2004] Allow settings to be duplicated when duplicating a context
- Added missing OnUserBeforeRemove event
- [#MODX-1797] Fix bug with publishedby field getting updated unintentionally