@@ -750,7 +750,6 @@ ul#modx-topnav li ul.modx-subnav li:hover ul  {
 .icon-chunk .x-tree-node-icon { background-image:url(../images/restyle/icons/chunk.png) !important; }
 .icon-plugin .x-tree-node-icon { background-image:url(../images/restyle/icons/plugin.png) !important; }
 .icon-snippet .x-tree-node-icon { background-image:url(../images/restyle/icons/snippet.png) !important; }
-.icon-snippet .x-tree-node-icon { background-image:url(../images/restyle/icons/snippet.png) !important; }
 .icon-template .x-tree-node-icon { background-image:url(../images/restyle/icons/template.png) !important; }
 .icon-tv .x-tree-node-icon, .icon-templatevar .x-tree-node-icon { background-image:url(../images/restyle/icons/tv.png) !important; }
 
