@@ -4,7 +4,8 @@ development release, and is only shown to give an idea of what's currently in th
 
 MODx Revolution 2.0.0-rc-3 ($LastChangedRevision$, $LastChangedDate$)
 ====================================
-- Added directory create icon to file tree toolbar
+- [#MODX-217] Added create element type icons for Element tree
+- [#MODX-217] Added directory create icon to file tree toolbar, changed upload files button to icon
 - [#MODX-2022] Fixed bug regarding php file permissions and writable checks
 - Fixed bugs related to loading of RTEs for TVs in derivative resource classes
 - Enhanced image TV to show preview of image, adjusted to display below
